# esp32idf_radioamateur_modem

./: CMakeLists.txt  README.md  sdkconfig
components/esp32idf_radioamateur_modem/: CMakeLists.txt  esp32idf_radioamateur_modem.h
components/esp32idf_radioamateur_modem/include/: afsk.h  ax25.h  crc_ccit.h  esp32idf_radioamateur_modem_config.h  fx25.h  kiss.h  modem.h
components/esp32idf_radioamateur_modem/lwfec/: gf.c  gf.h  rs.c  rs.h
components/esp32idf_radioamateur_modem/src/: afsk.c  ax25.c  crc_ccit.c  esp32idf_radioamateur_modem.c  fx25.c  kiss.c  modem.c
main/: CMakeLists.txt  afsk_diag.c  afsk_diag.h  afsk_loopback_test.c  afsk_loopback_test.h  app_main.c
